--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ align-items: center;
 border: red 3px solid;
 
 }
+h1{font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
 body{
    display: flex;
    justify-content: center;
